unpackaged/main/default/objects/Hierarchy_Batch_Param__mdt/Hierarchy_Batch_Param__mdt.object-meta.xml
<CustomObject>
    <label>Hierarchy Batch Param</label>
    <pluralLabel>Hierarchy Batch Params</pluralLabel>
</CustomObject>