unpackaged/main/default/objects/Hierarchy_Batch_Param__mdt/fields/Bypass_VR__c.field-meta.xml
<CustomField>
    <fullName>Bypass_VR__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Bypass VR</label>
    <type>Checkbox</type>
</CustomField>