unpackaged/main/default/objects/Hierarchy_Batch_Param__mdt/fields/Generate_Error_Report__c.field-meta.xml
<CustomField>
    <fullName>Generate_Error_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Error Report</label>
    <type>Checkbox</type>
</CustomField>