unpackaged/main/default/objects/Hierarchy_Batch_Param__mdt/fields/Generate_Exec_Report__c.field-meta.xml
<CustomField>
    <fullName>Generate_Exec_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Exec Report</label>
    <type>Checkbox</type>
</CustomField>